# sentiment-analysis-stacked-rnn

./: .gitignore  README.md  StackedRNN.code-workspace  config.py  conftest.py  evaluate.py  main.py  model.py  pyproject.toml  requirements.txt  visualize.py
.kiro/specs/lstm-training-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/sentiment-rnn/: design.md  idea-honing.md  requirements.md  rough-idea.md  tasks.md
.kiro/specs/sentiment-rnn/research/: embeddings-pretrained-vs-scratch.md  vocabulary-and-hyperparameters.md
.kiro/specs/technical-report/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: spec-driven-development.md
doc/: config.tex  format.tex  main.tex  preamble.tex
doc/sections/: arquitectura.tex  codigo.tex  gradientes.tex  introduccion.tex  metodologia.tex  referencias.tex  reflexiones.tex  resultados.tex
src/: __init__.py  config.py  data.py  main.py  model.py  reflexiones.py  train.py
tests/: __init__.py  test_config.py  test_data.py  test_evaluate.py  test_lstm_fix.py  test_main.py  test_model.py  test_reflexiones.py  test_train.py  test_visualize.py
