[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis-stacked-rnn"
version = "1.0.0"
description = "Comparative study of stacked LSTM vs GRU for binary sentiment classification on IMDB"
requires-python = ">=3.9"
dependencies = [
    "torch==2.2.2",
    "datasets==2.19.1",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "scikit-learn==1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "hypothesis==6.103.1",
    "Pygments>=2.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
